--- a/Lab/2/zad2/main.html
+++ b/Lab/2/zad2/main.html
@@ -13,29 +13,28 @@
     <h1>Nawigacja</h1>
     <ul>
         <li><a href="#first-paragraph">pierwszy paragraf</a></li>
-        <li><a href="#second-paragraph">drugi paragraf</a></li>
+        <li><a href="#more-info">drugi paragraf</a></li>
         <li><a href="#footer">stopka</a></li>
-    </ul></header>
-<main>
+    </ul>
+</header>
 
-<article>
-    <div id="first-paragraph">
-        <h2>Lorem ipsum dolor sit.</h2>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet beatae consequatur corporis error laborum rem reprehenderit? A accusamus animi autem culpa delectus deleniti, eos ex, expedita facilis illum iure magni maiores maxime minima minus nostrum officia porro quaerat quibusdam repellat repudiandae sed sequi sint tempore veritatis! Amet aperiam consectetur distinctio dolorum eos eveniet labore magni necessitatibus nihil obcaecati omnis qui quibusdam rem repellendus sapiente sequi, soluta temporibus voluptas! Amet, asperiores est eum excepturi laboriosam modi officiis quia quis, recusandae rem repellat repellendus reprehenderit. Aliquam consequuntur cupiditate doloribus ducimus incidunt ipsum, iusto nemo quod recusandae rem tempora vel veniam! Ab adipisci aliquam, aperiam asperiores aut autem commodi, consectetur consequuntur culpa cupiditate deleniti ea earum enim eos, est eum expedita impedit ipsam nam natus nobis officiis pariatur perferendis praesentium quibusdam quis quisquam repudiandae sapiente sequi sint sunt suscipit velit voluptate? Aspernatur atque deleniti hic officia saepe veritatis? Accusantium aliquid at atque blanditiis deleniti deserunt dolore doloribus eaque earum eligendi et ex fugiat ipsa ipsam iste minima nam nihil, odit omnis pariatur perspiciatis praesentium, quia quis quo quos, rem saepe sit soluta sunt temporibus totam ullam vel veniam vitae voluptas voluptates voluptatibus. A adipisci cumque impedit nulla omnis quia quis quisquam veniam vitae.
-    </div>
-    <div id="second-paragraph">
-        <h3>Lorem ipsum dolor sit.</h3>
+<main>
+    <article id="first-paragraph">
+            <h2>Lorem ipsum dolor sit.</h2>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet beatae consequatur corporis error laborum rem reprehenderit? A accusamus animi autem culpa delectus deleniti, eos ex, expedita facilis illum iure magni maiores maxime minima minus nostrum officia porro quaerat quibusdam repellat repudiandae sed sequi sint tempore veritatis! Amet aperiam consectetur distinctio dolorum eos eveniet labore magni necessitatibus nihil obcaecati omnis qui quibusdam rem repellendus sapiente sequi, soluta temporibus voluptas! Amet, asperiores est eum excepturi laboriosam modi officiis quia quis, recusandae rem repellat repellendus reprehenderit. Aliquam consequuntur cupiditate doloribus ducimus incidunt ipsum, iusto nemo quod recusandae rem tempora vel veniam! Ab adipisci aliquam, aperiam asperiores aut autem commodi, consectetur consequuntur culpa cupiditate deleniti ea earum enim eos, est eum expedita impedit ipsam nam natus nobis officiis pariatur perferendis praesentium quibusdam quis quisquam repudiandae sapiente sequi sint sunt suscipit velit voluptate? Aspernatur atque deleniti hic officia saepe veritatis? Accusantium aliquid at atque blanditiis deleniti deserunt dolore doloribus eaque earum eligendi et ex fugiat ipsa ipsam iste minima nam nihil, odit omnis pariatur perspiciatis praesentium, quia quis quo quos, rem saepe sit soluta sunt temporibus totam ullam vel veniam vitae voluptas voluptates voluptatibus. A adipisci cumque impedit nulla omnis quia quis quisquam veniam vitae.
+
+    </article>
+    <div id="more-info">
+        <h3>More info</h3>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci alias animi asperiores at autem commodi consectetur, corporis dignissimos, eos esse excepturi fuga in itaque iusto laboriosam, nemo nulla officia possimus praesentium quibusdam quisquam quo repudiandae rerum sapiente sed sunt ullam velit voluptas voluptate. Accusantium assumenda blanditiis corporis, culpa deserunt doloremque dolorum error iusto, maxime nihil nostrum, optio placeat porro praesentium quas ratione voluptas! Beatae est eum id maxime nemo. Animi at, corporis delectus doloribus dolorum ducimus eos ex exercitationem explicabo laudantium magnam nobis nostrum odit optio pariatur perferendis quia quod reiciendis rem repellendus, repudiandae similique ut voluptas. Ab aperiam corporis, culpa distinctio doloribus ducimus ex explicabo odio optio sapiente? A ab alias assumenda cumque minima, odit pariatur sed voluptate. A aut inventore magnam, maiores possimus provident quia quo veritatis. Aliquid commodi cupiditate delectus dolores eius fugiat inventore, ipsam ipsum labore, libero mollitia, nostrum nulla obcaecati recusandae rem temporibus vero!
     </div>
-</article>
-
 </main>
 
 <br>
 
 <footer id="footer">
-&reg;
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis eaque error facere in modi nisi numquam ratione repudiandae voluptatibus. Blanditiis inventore omnis optio voluptatum. Asperiores assumenda dolorum, eaque excepturi facere iusto nobis optio perferendis quae, quas, qui repellat totam?
+    &reg;
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis eaque error facere in modi nisi numquam ratione repudiandae voluptatibus. Blanditiis inventore omnis optio voluptatum. Asperiores assumenda dolorum, eaque excepturi facere iusto nobis optio perferendis quae, quas, qui repellat totam?
 </footer>
 
 </body>
