--- a/Lab/2/zad5/main.html
+++ b/Lab/2/zad5/main.html
@@ -9,14 +9,12 @@
 </head>
 <body>
 
-<iframe src="https://www.w3schools.com" title="W3Schools Free Online Web Tutorials"></iframe>
+<iframe src="https://pja.edu.pl/" title="PJATK" width="640" height="480"></iframe>
 <br><br>
-<video src="video.mp4" controls>info</video>
-<br><br>
-<video src="video.webm" controls>info</video>
+<video src="video.mp4" controls autoplay>info</video>
+<video src="video.webm" controls autoplay>info</video>
 <br><br>
 <audio src="audio.mp3" controls>info</audio>
-<br><br>
 <audio src="audio.wav" controls>info</audio>
 </body>
 </html>
